# embed-sandbox

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs  justfile  prj.conf  rust-toolchain.toml  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: build-and-flash.yml
boards/: native_sim.conf  native_sim.overlay  nucleo_g070rb.overlay
docs/: architecture.md  stm32-zephyr-migration-plan.md
scripts/: bootstrap_zephyr.sh  setup_env.sh  verify_serial.py
src/: board.rs  generator.c  generator.h  main.c  main.rs  scenarios.c  scenarios.h  shell_commands.c  shell_commands.h  statistics.c  statistics.h  uart_manager.c  uart_manager.h
