[package]
name = "embed-sandbox"
version = "0.1.0"
edition = "2021"
description = "Serial test tool for the Waveshare ESP32-S3-LCD-1.47 (ESP32-S3)"
license = "MIT OR Apache-2.0"

[[bin]]
name = "embed-sandbox"
path = "src/main.rs"

[dependencies]
log = "0.4"
anyhow = "1"

esp-idf-sys = { version = "0.37", features = ["binstart"] }
esp-idf-hal = "0.46"
esp-idf-svc = "0.52"
[build-dependencies]
embuild = "0.33"

[profile.dev]
debug = true
opt-level = "s"

[profile.release]
opt-level = "s"
lto = "thin"
